--- a/Client/gradbena-soglasja-react-project/package.json
+++ b/Client/gradbena-soglasja-react-project/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/proj4": "^2.5.2",
     "bootstrap": "^5.2.3",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^2.4.0",
+    "proj4": "^2.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "7.0.21",
