--- a/Client/gradbena-soglasja-react-project/package.json
+++ b/Client/gradbena-soglasja-react-project/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "@types/proj4": "^2.5.2",
     "bootstrap": "^5.2.3",
     "mapbox-gl": "^2.13.0",
