--- a/Client/gradbena-soglasja-react-project/package.json
+++ b/Client/gradbena-soglasja-react-project/package.json
@@ -1,5 +1,7 @@
 {
   "name": "gradbena-soglasja-react-project",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -27,5 +29,8 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
-  }
+  },
+  "keywords": [],
+  "author": "Alen Kurtagić",
+  "license": "MIT"
 }
