--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
     "@types/node": "^18.15.11",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "geojson": "^0.5.0",
