--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -9,6 +9,7 @@
     "build": "rollup -c  --bundleConfigAsCjs"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "geojson": "^0.5.0",
     "pg": "^8.10.0",
+    "proj4": "^2.9.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
@@ -26,6 +28,7 @@
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/pg": "^8.6.6",
+    "@types/proj4": "^2.5.2",
     "rollup-plugin-dotenv": "^0.4.1"
   }
 }
