Calling API from frontend
Working API calls from front end achieving client side rendering

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,10 @@
       "src/*": ["src/*"]
     }
   },
-  "include": ["src", "src/services/suggestions.tsocomplete.tsgestions.ts"],
+  "include": [
+    "src",
+    "src/services/suggestions.tsocomplete.tsgestions.ts",
+    "src/utils/.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
