Refactored backend src and database

--- a/backend/src/tsconfig.json
+++ b/backend/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "module": "esnext" /* Specify what module code is generated. */,
+    "module": "commonjs" /* Specify what module code is generated. */,
     "moduleResolution": "node",
     "outDir": "build",
     "rootDir": "src",
