--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "@types/pako": "^2.0.0",
     "@types/proj4": "^2.5.2",
     "bootstrap": "^5.2.3",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^2.4.0",
+    "pako": "^2.1.0",
     "proj4": "^2.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "7.0.21",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "sass": "^1.60.0"
   },
